fix reviews module
